grammar.output
Terminals unused in grammar

   MINUS


Grammar

    0 $accept: program $end

    1 program: PROGRAM '{' lDeclarations MethodDeclarations '}'

    2 lDeclarations: %empty
    3              | lDeclarations Declaration

    4 MethodDeclarations: %empty
    5                   | MethodDeclaration MethodDeclarations

    6 MethodDeclaration: Method Block
    7                  | Method EXTERN ';'

    8 Method: VOID ID '(' Params ')'
    9       | Type ID '(' Params ')'

   10 Params: %empty
   11       | OneOrMoreParams

   12 OneOrMoreParams: Param
   13                | Param ',' OneOrMoreParams

   14 Param: Type ID

   15 Block: '{' lDeclarations lStatements '}'

   16 lStatements: %empty
   17            | lStatements Statement

   18 Statement: ID '=' E ';'
   19          | MethodCall ';'
   20          | IF '(' E ')' THEN Block
   21          | IF '(' E ')' THEN Block ELSE Block
   22          | WHILE E Block
   23          | RETURN ';'
   24          | RETURN E ';'
   25          | Block

   26 Declaration: Type ID '=' E ';'

   27 E: ID
   28  | MethodCall
   29  | V
   30  | E '+' E
   31  | E '-' E
   32  | E '*' E
   33  | E '/' E
   34  | E '%' E
   35  | E '<' E
   36  | E '>' E
   37  | E EQT E
   38  | E OR E
   39  | E AND E
   40  | '!' E
   41  | '(' E ')'

   42 V: vINT
   43  | vBOOL

   44 Expressions: %empty
   45            | OneOrMoreExpressions

   46 OneOrMoreExpressions: E
   47                     | E ',' OneOrMoreExpressions

   48 Type: tINT
   49     | tBOOL

   50 MethodCall: ID '(' Expressions ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 40
'%' (37) 34
'(' (40) 8 9 20 21 41 50
')' (41) 8 9 20 21 41 50
'*' (42) 32
'+' (43) 30
',' (44) 13 47
'-' (45) 31
'/' (47) 33
';' (59) 7 18 19 23 24 26
'<' (60) 35
'=' (61) 18 26
'>' (62) 36
'{' (123) 1 15
'}' (125) 1 15
error (256)
PROGRAM (258) 1
IF (259) 20 21
THEN (260) 20 21
ELSE (261) 21
RETURN (262) 23 24
EXTERN (263) 7
WHILE (264) 22
ID (265) 8 9 14 18 26 27 50
vINT (266) 42
vBOOL (267) 43
tINT (268) 48
tBOOL (269) 49
VOID (270) 8
MINUS (271)
OR (272) 38
AND (273) 39
EQT (274) 37


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
program (36)
    on left: 1, on right: 0
lDeclarations (37)
    on left: 2 3, on right: 1 3 15
MethodDeclarations (38)
    on left: 4 5, on right: 1 5
MethodDeclaration (39)
    on left: 6 7, on right: 5
Method (40)
    on left: 8 9, on right: 6 7
Params (41)
    on left: 10 11, on right: 8 9
OneOrMoreParams (42)
    on left: 12 13, on right: 11 13
Param (43)
    on left: 14, on right: 12 13
Block (44)
    on left: 15, on right: 6 20 21 22 25
lStatements (45)
    on left: 16 17, on right: 15 17
Statement (46)
    on left: 18 19 20 21 22 23 24 25, on right: 17
Declaration (47)
    on left: 26, on right: 3
E (48)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41, on right:
    18 20 21 22 24 26 30 31 32 33 34 35 36 37 38 39 40 41 46 47
V (49)
    on left: 42 43, on right: 29
Expressions (50)
    on left: 44 45, on right: 50
OneOrMoreExpressions (51)
    on left: 46 47, on right: 45 47
Type (52)
    on left: 48 49, on right: 9 14 26
MethodCall (53)
    on left: 50, on right: 19 28


State 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAM . '{' lDeclarations MethodDeclarations '}'

    '{'  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: PROGRAM '{' . lDeclarations MethodDeclarations '}'

    $default  reduce using rule 2 (lDeclarations)

    lDeclarations  go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    1 program: PROGRAM '{' lDeclarations . MethodDeclarations '}'
    3 lDeclarations: lDeclarations . Declaration

    tINT   shift, and go to state 6
    tBOOL  shift, and go to state 7
    VOID   shift, and go to state 8

    $default  reduce using rule 4 (MethodDeclarations)

    MethodDeclarations  go to state 9
    MethodDeclaration   go to state 10
    Method              go to state 11
    Declaration         go to state 12
    Type                go to state 13


State 6

   48 Type: tINT .

    $default  reduce using rule 48 (Type)


State 7

   49 Type: tBOOL .

    $default  reduce using rule 49 (Type)


State 8

    8 Method: VOID . ID '(' Params ')'

    ID  shift, and go to state 14


State 9

    1 program: PROGRAM '{' lDeclarations MethodDeclarations . '}'

    '}'  shift, and go to state 15


State 10

    5 MethodDeclarations: MethodDeclaration . MethodDeclarations

    tINT   shift, and go to state 6
    tBOOL  shift, and go to state 7
    VOID   shift, and go to state 8

    $default  reduce using rule 4 (MethodDeclarations)

    MethodDeclarations  go to state 16
    MethodDeclaration   go to state 10
    Method              go to state 11
    Type                go to state 17


State 11

    6 MethodDeclaration: Method . Block
    7                  | Method . EXTERN ';'

    EXTERN  shift, and go to state 18
    '{'     shift, and go to state 19

    Block  go to state 20


State 12

    3 lDeclarations: lDeclarations Declaration .

    $default  reduce using rule 3 (lDeclarations)


State 13

    9 Method: Type . ID '(' Params ')'
   26 Declaration: Type . ID '=' E ';'

    ID  shift, and go to state 21


State 14

    8 Method: VOID ID . '(' Params ')'

    '('  shift, and go to state 22


State 15

    1 program: PROGRAM '{' lDeclarations MethodDeclarations '}' .

    $default  reduce using rule 1 (program)


State 16

    5 MethodDeclarations: MethodDeclaration MethodDeclarations .

    $default  reduce using rule 5 (MethodDeclarations)


State 17

    9 Method: Type . ID '(' Params ')'

    ID  shift, and go to state 23


State 18

    7 MethodDeclaration: Method EXTERN . ';'

    ';'  shift, and go to state 24


State 19

   15 Block: '{' . lDeclarations lStatements '}'

    $default  reduce using rule 2 (lDeclarations)

    lDeclarations  go to state 25


State 20

    6 MethodDeclaration: Method Block .

    $default  reduce using rule 6 (MethodDeclaration)


State 21

    9 Method: Type ID . '(' Params ')'
   26 Declaration: Type ID . '=' E ';'

    '='  shift, and go to state 26
    '('  shift, and go to state 27


State 22

    8 Method: VOID ID '(' . Params ')'

    tINT   shift, and go to state 6
    tBOOL  shift, and go to state 7

    $default  reduce using rule 10 (Params)

    Params           go to state 28
    OneOrMoreParams  go to state 29
    Param            go to state 30
    Type             go to state 31


State 23

    9 Method: Type ID . '(' Params ')'

    '('  shift, and go to state 27


State 24

    7 MethodDeclaration: Method EXTERN ';' .

    $default  reduce using rule 7 (MethodDeclaration)


State 25

    3 lDeclarations: lDeclarations . Declaration
   15 Block: '{' lDeclarations . lStatements '}'

    tINT   shift, and go to state 6
    tBOOL  shift, and go to state 7

    $default  reduce using rule 16 (lStatements)

    lStatements  go to state 32
    Declaration  go to state 12
    Type         go to state 33


State 26

   26 Declaration: Type ID '=' . E ';'

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    E           go to state 39
    V           go to state 40
    MethodCall  go to state 41


State 27

    9 Method: Type ID '(' . Params ')'

    tINT   shift, and go to state 6
    tBOOL  shift, and go to state 7

    $default  reduce using rule 10 (Params)

    Params           go to state 42
    OneOrMoreParams  go to state 29
    Param            go to state 30
    Type             go to state 31


State 28

    8 Method: VOID ID '(' Params . ')'

    ')'  shift, and go to state 43


State 29

   11 Params: OneOrMoreParams .

    $default  reduce using rule 11 (Params)


State 30

   12 OneOrMoreParams: Param .
   13                | Param . ',' OneOrMoreParams

    ','  shift, and go to state 44

    $default  reduce using rule 12 (OneOrMoreParams)


State 31

   14 Param: Type . ID

    ID  shift, and go to state 45


State 32

   15 Block: '{' lDeclarations lStatements . '}'
   17 lStatements: lStatements . Statement

    IF      shift, and go to state 46
    RETURN  shift, and go to state 47
    WHILE   shift, and go to state 48
    ID      shift, and go to state 49
    '{'     shift, and go to state 19
    '}'     shift, and go to state 50

    Block       go to state 51
    Statement   go to state 52
    MethodCall  go to state 53


State 33

   26 Declaration: Type . ID '=' E ';'

    ID  shift, and go to state 54


State 34

   27 E: ID .
   50 MethodCall: ID . '(' Expressions ')'

    '('  shift, and go to state 55

    $default  reduce using rule 27 (E)


State 35

   42 V: vINT .

    $default  reduce using rule 42 (V)


State 36

   43 V: vBOOL .

    $default  reduce using rule 43 (V)


State 37

   40 E: '!' . E

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    E           go to state 56
    V           go to state 40
    MethodCall  go to state 41


State 38

   41 E: '(' . E ')'

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    E           go to state 57
    V           go to state 40
    MethodCall  go to state 41


State 39

   26 Declaration: Type ID '=' E . ';'
   30 E: E . '+' E
   31  | E . '-' E
   32  | E . '*' E
   33  | E . '/' E
   34  | E . '%' E
   35  | E . '<' E
   36  | E . '>' E
   37  | E . EQT E
   38  | E . OR E
   39  | E . AND E

    OR   shift, and go to state 58
    AND  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '%'  shift, and go to state 64
    '<'  shift, and go to state 65
    '>'  shift, and go to state 66
    EQT  shift, and go to state 67
    ';'  shift, and go to state 68


State 40

   29 E: V .

    $default  reduce using rule 29 (E)


State 41

   28 E: MethodCall .

    $default  reduce using rule 28 (E)


State 42

    9 Method: Type ID '(' Params . ')'

    ')'  shift, and go to state 69


State 43

    8 Method: VOID ID '(' Params ')' .

    $default  reduce using rule 8 (Method)


State 44

   13 OneOrMoreParams: Param ',' . OneOrMoreParams

    tINT   shift, and go to state 6
    tBOOL  shift, and go to state 7

    OneOrMoreParams  go to state 70
    Param            go to state 30
    Type             go to state 31


State 45

   14 Param: Type ID .

    $default  reduce using rule 14 (Param)


State 46

   20 Statement: IF . '(' E ')' THEN Block
   21          | IF . '(' E ')' THEN Block ELSE Block

    '('  shift, and go to state 71


State 47

   23 Statement: RETURN . ';'
   24          | RETURN . E ';'

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    ';'    shift, and go to state 72
    '('    shift, and go to state 38

    E           go to state 73
    V           go to state 40
    MethodCall  go to state 41


State 48

   22 Statement: WHILE . E Block

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    E           go to state 74
    V           go to state 40
    MethodCall  go to state 41


State 49

   18 Statement: ID . '=' E ';'
   50 MethodCall: ID . '(' Expressions ')'

    '='  shift, and go to state 75
    '('  shift, and go to state 55


State 50

   15 Block: '{' lDeclarations lStatements '}' .

    $default  reduce using rule 15 (Block)


State 51

   25 Statement: Block .

    $default  reduce using rule 25 (Statement)


State 52

   17 lStatements: lStatements Statement .

    $default  reduce using rule 17 (lStatements)


State 53

   19 Statement: MethodCall . ';'

    ';'  shift, and go to state 76


State 54

   26 Declaration: Type ID . '=' E ';'

    '='  shift, and go to state 26


State 55

   50 MethodCall: ID '(' . Expressions ')'

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    $default  reduce using rule 44 (Expressions)

    E                     go to state 77
    V                     go to state 40
    Expressions           go to state 78
    OneOrMoreExpressions  go to state 79
    MethodCall            go to state 41


State 56

   30 E: E . '+' E
   31  | E . '-' E
   32  | E . '*' E
   33  | E . '/' E
   34  | E . '%' E
   35  | E . '<' E
   36  | E . '>' E
   37  | E . EQT E
   38  | E . OR E
   39  | E . AND E
   40  | '!' E .

    '<'  shift, and go to state 65
    '>'  shift, and go to state 66
    EQT  shift, and go to state 67

    $default  reduce using rule 40 (E)


State 57

   30 E: E . '+' E
   31  | E . '-' E
   32  | E . '*' E
   33  | E . '/' E
   34  | E . '%' E
   35  | E . '<' E
   36  | E . '>' E
   37  | E . EQT E
   38  | E . OR E
   39  | E . AND E
   41  | '(' E . ')'

    OR   shift, and go to state 58
    AND  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '%'  shift, and go to state 64
    '<'  shift, and go to state 65
    '>'  shift, and go to state 66
    EQT  shift, and go to state 67
    ')'  shift, and go to state 80


State 58

   38 E: E OR . E

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    E           go to state 81
    V           go to state 40
    MethodCall  go to state 41


State 59

   39 E: E AND . E

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    E           go to state 82
    V           go to state 40
    MethodCall  go to state 41


State 60

   30 E: E '+' . E

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    E           go to state 83
    V           go to state 40
    MethodCall  go to state 41


State 61

   31 E: E '-' . E

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    E           go to state 84
    V           go to state 40
    MethodCall  go to state 41


State 62

   32 E: E '*' . E

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    E           go to state 85
    V           go to state 40
    MethodCall  go to state 41


State 63

   33 E: E '/' . E

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    E           go to state 86
    V           go to state 40
    MethodCall  go to state 41


State 64

   34 E: E '%' . E

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    E           go to state 87
    V           go to state 40
    MethodCall  go to state 41


State 65

   35 E: E '<' . E

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    E           go to state 88
    V           go to state 40
    MethodCall  go to state 41


State 66

   36 E: E '>' . E

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    E           go to state 89
    V           go to state 40
    MethodCall  go to state 41


State 67

   37 E: E EQT . E

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    E           go to state 90
    V           go to state 40
    MethodCall  go to state 41


State 68

   26 Declaration: Type ID '=' E ';' .

    $default  reduce using rule 26 (Declaration)


State 69

    9 Method: Type ID '(' Params ')' .

    $default  reduce using rule 9 (Method)


State 70

   13 OneOrMoreParams: Param ',' OneOrMoreParams .

    $default  reduce using rule 13 (OneOrMoreParams)


State 71

   20 Statement: IF '(' . E ')' THEN Block
   21          | IF '(' . E ')' THEN Block ELSE Block

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    E           go to state 91
    V           go to state 40
    MethodCall  go to state 41


State 72

   23 Statement: RETURN ';' .

    $default  reduce using rule 23 (Statement)


State 73

   24 Statement: RETURN E . ';'
   30 E: E . '+' E
   31  | E . '-' E
   32  | E . '*' E
   33  | E . '/' E
   34  | E . '%' E
   35  | E . '<' E
   36  | E . '>' E
   37  | E . EQT E
   38  | E . OR E
   39  | E . AND E

    OR   shift, and go to state 58
    AND  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '%'  shift, and go to state 64
    '<'  shift, and go to state 65
    '>'  shift, and go to state 66
    EQT  shift, and go to state 67
    ';'  shift, and go to state 92


State 74

   22 Statement: WHILE E . Block
   30 E: E . '+' E
   31  | E . '-' E
   32  | E . '*' E
   33  | E . '/' E
   34  | E . '%' E
   35  | E . '<' E
   36  | E . '>' E
   37  | E . EQT E
   38  | E . OR E
   39  | E . AND E

    OR   shift, and go to state 58
    AND  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '%'  shift, and go to state 64
    '<'  shift, and go to state 65
    '>'  shift, and go to state 66
    EQT  shift, and go to state 67
    '{'  shift, and go to state 19

    Block  go to state 93


State 75

   18 Statement: ID '=' . E ';'

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    E           go to state 94
    V           go to state 40
    MethodCall  go to state 41


State 76

   19 Statement: MethodCall ';' .

    $default  reduce using rule 19 (Statement)


State 77

   30 E: E . '+' E
   31  | E . '-' E
   32  | E . '*' E
   33  | E . '/' E
   34  | E . '%' E
   35  | E . '<' E
   36  | E . '>' E
   37  | E . EQT E
   38  | E . OR E
   39  | E . AND E
   46 OneOrMoreExpressions: E .
   47                     | E . ',' OneOrMoreExpressions

    OR   shift, and go to state 58
    AND  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '%'  shift, and go to state 64
    '<'  shift, and go to state 65
    '>'  shift, and go to state 66
    EQT  shift, and go to state 67
    ','  shift, and go to state 95

    $default  reduce using rule 46 (OneOrMoreExpressions)


State 78

   50 MethodCall: ID '(' Expressions . ')'

    ')'  shift, and go to state 96


State 79

   45 Expressions: OneOrMoreExpressions .

    $default  reduce using rule 45 (Expressions)


State 80

   41 E: '(' E ')' .

    $default  reduce using rule 41 (E)


State 81

   30 E: E . '+' E
   31  | E . '-' E
   32  | E . '*' E
   33  | E . '/' E
   34  | E . '%' E
   35  | E . '<' E
   36  | E . '>' E
   37  | E . EQT E
   38  | E . OR E
   38  | E OR E .
   39  | E . AND E

    AND  shift, and go to state 59
    '<'  shift, and go to state 65
    '>'  shift, and go to state 66
    EQT  shift, and go to state 67

    $default  reduce using rule 38 (E)


State 82

   30 E: E . '+' E
   31  | E . '-' E
   32  | E . '*' E
   33  | E . '/' E
   34  | E . '%' E
   35  | E . '<' E
   36  | E . '>' E
   37  | E . EQT E
   38  | E . OR E
   39  | E . AND E
   39  | E AND E .

    '<'  shift, and go to state 65
    '>'  shift, and go to state 66
    EQT  shift, and go to state 67

    $default  reduce using rule 39 (E)


State 83

   30 E: E . '+' E
   30  | E '+' E .
   31  | E . '-' E
   32  | E . '*' E
   33  | E . '/' E
   34  | E . '%' E
   35  | E . '<' E
   36  | E . '>' E
   37  | E . EQT E
   38  | E . OR E
   39  | E . AND E

    OR   shift, and go to state 58
    AND  shift, and go to state 59
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '%'  shift, and go to state 64
    '<'  shift, and go to state 65
    '>'  shift, and go to state 66
    EQT  shift, and go to state 67

    $default  reduce using rule 30 (E)


State 84

   30 E: E . '+' E
   31  | E . '-' E
   31  | E '-' E .
   32  | E . '*' E
   33  | E . '/' E
   34  | E . '%' E
   35  | E . '<' E
   36  | E . '>' E
   37  | E . EQT E
   38  | E . OR E
   39  | E . AND E

    OR   shift, and go to state 58
    AND  shift, and go to state 59
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '%'  shift, and go to state 64
    '<'  shift, and go to state 65
    '>'  shift, and go to state 66
    EQT  shift, and go to state 67

    $default  reduce using rule 31 (E)


State 85

   30 E: E . '+' E
   31  | E . '-' E
   32  | E . '*' E
   32  | E '*' E .
   33  | E . '/' E
   34  | E . '%' E
   35  | E . '<' E
   36  | E . '>' E
   37  | E . EQT E
   38  | E . OR E
   39  | E . AND E

    OR   shift, and go to state 58
    AND  shift, and go to state 59
    '/'  shift, and go to state 63
    '%'  shift, and go to state 64
    '<'  shift, and go to state 65
    '>'  shift, and go to state 66
    EQT  shift, and go to state 67

    $default  reduce using rule 32 (E)


State 86

   30 E: E . '+' E
   31  | E . '-' E
   32  | E . '*' E
   33  | E . '/' E
   33  | E '/' E .
   34  | E . '%' E
   35  | E . '<' E
   36  | E . '>' E
   37  | E . EQT E
   38  | E . OR E
   39  | E . AND E

    OR   shift, and go to state 58
    AND  shift, and go to state 59
    '%'  shift, and go to state 64
    '<'  shift, and go to state 65
    '>'  shift, and go to state 66
    EQT  shift, and go to state 67

    $default  reduce using rule 33 (E)


State 87

   30 E: E . '+' E
   31  | E . '-' E
   32  | E . '*' E
   33  | E . '/' E
   34  | E . '%' E
   34  | E '%' E .
   35  | E . '<' E
   36  | E . '>' E
   37  | E . EQT E
   38  | E . OR E
   39  | E . AND E

    OR   shift, and go to state 58
    AND  shift, and go to state 59
    '<'  shift, and go to state 65
    '>'  shift, and go to state 66
    EQT  shift, and go to state 67

    $default  reduce using rule 34 (E)


State 88

   30 E: E . '+' E
   31  | E . '-' E
   32  | E . '*' E
   33  | E . '/' E
   34  | E . '%' E
   35  | E . '<' E
   35  | E '<' E .
   36  | E . '>' E
   37  | E . EQT E
   38  | E . OR E
   39  | E . AND E

    '>'  shift, and go to state 66
    EQT  shift, and go to state 67

    $default  reduce using rule 35 (E)


State 89

   30 E: E . '+' E
   31  | E . '-' E
   32  | E . '*' E
   33  | E . '/' E
   34  | E . '%' E
   35  | E . '<' E
   36  | E . '>' E
   36  | E '>' E .
   37  | E . EQT E
   38  | E . OR E
   39  | E . AND E

    EQT  shift, and go to state 67

    $default  reduce using rule 36 (E)


State 90

   30 E: E . '+' E
   31  | E . '-' E
   32  | E . '*' E
   33  | E . '/' E
   34  | E . '%' E
   35  | E . '<' E
   36  | E . '>' E
   37  | E . EQT E
   37  | E EQT E .
   38  | E . OR E
   39  | E . AND E

    $default  reduce using rule 37 (E)


State 91

   20 Statement: IF '(' E . ')' THEN Block
   21          | IF '(' E . ')' THEN Block ELSE Block
   30 E: E . '+' E
   31  | E . '-' E
   32  | E . '*' E
   33  | E . '/' E
   34  | E . '%' E
   35  | E . '<' E
   36  | E . '>' E
   37  | E . EQT E
   38  | E . OR E
   39  | E . AND E

    OR   shift, and go to state 58
    AND  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '%'  shift, and go to state 64
    '<'  shift, and go to state 65
    '>'  shift, and go to state 66
    EQT  shift, and go to state 67
    ')'  shift, and go to state 97


State 92

   24 Statement: RETURN E ';' .

    $default  reduce using rule 24 (Statement)


State 93

   22 Statement: WHILE E Block .

    $default  reduce using rule 22 (Statement)


State 94

   18 Statement: ID '=' E . ';'
   30 E: E . '+' E
   31  | E . '-' E
   32  | E . '*' E
   33  | E . '/' E
   34  | E . '%' E
   35  | E . '<' E
   36  | E . '>' E
   37  | E . EQT E
   38  | E . OR E
   39  | E . AND E

    OR   shift, and go to state 58
    AND  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '%'  shift, and go to state 64
    '<'  shift, and go to state 65
    '>'  shift, and go to state 66
    EQT  shift, and go to state 67
    ';'  shift, and go to state 98


State 95

   47 OneOrMoreExpressions: E ',' . OneOrMoreExpressions

    ID     shift, and go to state 34
    vINT   shift, and go to state 35
    vBOOL  shift, and go to state 36
    '!'    shift, and go to state 37
    '('    shift, and go to state 38

    E                     go to state 77
    V                     go to state 40
    OneOrMoreExpressions  go to state 99
    MethodCall            go to state 41


State 96

   50 MethodCall: ID '(' Expressions ')' .

    $default  reduce using rule 50 (MethodCall)


State 97

   20 Statement: IF '(' E ')' . THEN Block
   21          | IF '(' E ')' . THEN Block ELSE Block

    THEN  shift, and go to state 100


State 98

   18 Statement: ID '=' E ';' .

    $default  reduce using rule 18 (Statement)


State 99

   47 OneOrMoreExpressions: E ',' OneOrMoreExpressions .

    $default  reduce using rule 47 (OneOrMoreExpressions)


State 100

   20 Statement: IF '(' E ')' THEN . Block
   21          | IF '(' E ')' THEN . Block ELSE Block

    '{'  shift, and go to state 19

    Block  go to state 101


State 101

   20 Statement: IF '(' E ')' THEN Block .
   21          | IF '(' E ')' THEN Block . ELSE Block

    ELSE  shift, and go to state 102

    $default  reduce using rule 20 (Statement)


State 102

   21 Statement: IF '(' E ')' THEN Block ELSE . Block

    '{'  shift, and go to state 19

    Block  go to state 103


State 103

   21 Statement: IF '(' E ')' THEN Block ELSE Block .

    $default  reduce using rule 21 (Statement)
